--- a/src/main/frontend/socialize/src/components/signin/stule.css
+++ b/src/main/frontend/socialize/src/components/signin/stule.css
@@ -1,6 +1,6 @@
 .image-container {
     position: fixed;
-    top: 0;
+    top: 5%;
     right: 10px;
     width: 500px; /* Adjust the width as needed */
     height: 100%;
