--- a/src/main/frontend/socialize/src/components/signin/stule.css
+++ b/src/main/frontend/socialize/src/components/signin/stule.css
@@ -1,5 +1,5 @@
 .image-container {
-    position: fixed;
+    position: absolute;
     top: 5%;
     right: 10px;
     width: 500px; /* Adjust the width as needed */
