--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -35,140 +35,28 @@
                            <h4 class="card-title">Create Post</h4>
                         </div>
                      </div>
-                     <div class="card-body" data-toggle="modal" data-target="#post-modal">
+                     <div class="card-body">
                         <div class="d-flex align-items-center">
                            <div class="user-img">
-                              <img src="../assets/images/user/1.jpg" alt="userimg" class="avatar-60 rounded-circle img-fluid">
+                              <img src="../assets/images/user/1.jpg" alt="userimg" class="avatar-60 rounded-circle">
                            </div>
-                           <form class="post-text ml-3 w-100" action="#">
-                              <input type="text" class="form-control rounded" placeholder="Write something here..." style="border:none;">
+                           <form class="post-text ms-3 w-100" id="create-post-form">
+                              <textarea class="form-control rounded" id="postContent" rows="3" placeholder="Write something here..." style="border:none;"></textarea>
+                              <hr>
+                              <ul class="post-opt-block d-flex list-inline m-0 p-0 flex-wrap">
+                                 <li class="me-3 mb-md-0 mb-2">
+                                    <label for="imageUpload" class="btn btn-soft-primary">
+                                       <img src="../assets/images/small/07.png" alt="icon" class="img-fluid me-2"> Photo/Video
+                                       <input type="file" id="imageUpload" accept="image/*" style="display:none;">
+                                    </label>
+                                 </li>
+
+                              </ul>
+                              <div class="form-group mt-3" id="imagePreviewContainer" style="display:none;">
+                                 <img id="imagePreview" class="preview-image img-fluid">
+                              </div>
+                              <button type="submit" class="btn btn-primary mt-3" id="submitPostBtn">Submit</button>
                            </form>
-                        </div>
-                        <hr>
-                        <ul class="post-opt-block d-flex align-items-center list-inline m-0 p-0">
-                           <li class="iq-bg-primary rounded p-2 pointer mr-3"><a href="#"></a><img src="../assets/images/small/07.png" alt="icon" class="img-fluid"> Photo/Video</li>
-                           <li class="iq-bg-primary rounded p-2 pointer mr-3"><a href="#"></a><img src="../assets/images/small/08.png" alt="icon" class="img-fluid"> Tag Friend</li>
-                           <li class="iq-bg-primary rounded p-2 pointer mr-3"><a href="#"></a><img src="../assets/images/small/09.png" alt="icon" class="img-fluid"> Feeling/Activity</li>
-                           <li class="iq-bg-primary rounded p-2 pointer">
-                              <div class="card-header-toolbar d-flex align-items-center">
-                                 <div class="dropdown">
-                                    <span class="dropdown-toggle" id="post-option" data-toggle="dropdown" >
-                                    <i class="ri-more-fill"></i>
-                                    </span>
-                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="post-option" style="">
-                                       <a class="dropdown-item" href="#">Check in</a>
-                                       <a class="dropdown-item" href="#">Live Video</a>
-                                       <a class="dropdown-item" href="#">Gif</a>
-                                       <a class="dropdown-item" href="#">Watch Party</a>
-                                       <a class="dropdown-item" href="#">Play with Friend</a>
-                                    </div>
-                                 </div>
-                              </div>
-                           </li>
-                        </ul>
-                     </div>
-                     <div class="modal fade" id="post-modal" tabindex="-1" role="dialog" aria-labelledby="post-modalLabel" aria-hidden="true" style="display: none;">
-                        <div class="modal-dialog" role="document">
-                           <div class="modal-content">
-                              <div class="modal-header">
-                                 <h5 class="modal-title" id="post-modalLabel">Create Post</h5>
-                                 <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="ri-close-fill"></i></button>
-                              </div>
-                              <div class="modal-body">
-                                 <div class="d-flex align-items-center">
-                                    <div class="user-img">
-                                       <img src="../assets/images/user/1.jpg" alt="userimg" class="avatar-60 rounded-circle img-fluid">
-                                    </div>
-                                    <form class="post-text ml-3 w-100" action="#">
-                                       <input type="text" class="form-control rounded" placeholder="Write something here..." style="border:none;">
-                                    </form>
-                                 </div>
-                                 <hr>
-                                 <ul class="d-flex flex-wrap align-items-center list-inline m-0 p-0">
-                                    <li class="col-md-6 mb-3">
-                                       <div class="iq-bg-primary rounded p-2 pointer mr-3"><a href="#"></a><img src="../assets/images/small/07.png" alt="icon" class="img-fluid"> Photo/Video</div>
-                                    </li>
-                                    <li class="col-md-6 mb-3">
-                                       <div class="iq-bg-primary rounded p-2 pointer mr-3"><a href="#"></a><img src="../assets/images/small/08.png" alt="icon" class="img-fluid"> Tag Friend</div>
-                                    </li>
-                                    <li class="col-md-6 mb-3">
-                                       <div class="iq-bg-primary rounded p-2 pointer mr-3"><a href="#"></a><img src="../assets/images/small/09.png" alt="icon" class="img-fluid"> Feeling/Activity</div>
-                                    </li>
-                                    <li class="col-md-6 mb-3">
-                                       <div class="iq-bg-primary rounded p-2 pointer mr-3"><a href="#"></a><img src="../assets/images/small/10.png" alt="icon" class="img-fluid"> Check in</div>
-                                    </li>
-                                    <li class="col-md-6 mb-3">
-                                       <div class="iq-bg-primary rounded p-2 pointer mr-3"><a href="#"></a><img src="../assets/images/small/11.png" alt="icon" class="img-fluid"> Live Video</div>
-                                    </li>
-                                    <li class="col-md-6 mb-3">
-                                       <div class="iq-bg-primary rounded p-2 pointer mr-3"><a href="#"></a><img src="../assets/images/small/12.png" alt="icon" class="img-fluid"> Gif</div>
-                                    </li>
-                                    <li class="col-md-6 mb-3">
-                                       <div class="iq-bg-primary rounded p-2 pointer mr-3"><a href="#"></a><img src="../assets/images/small/13.png" alt="icon" class="img-fluid"> Watch Party</div>
-                                    </li>
-                                    <li class="col-md-6 mb-3">
-                                       <div class="iq-bg-primary rounded p-2 pointer mr-3"><a href="#"></a><img src="../assets/images/small/14.png" alt="icon" class="img-fluid"> Play with Friends</div>
-                                    </li>
-                                 </ul>
-                                 <hr>
-                                 <div class="other-option">
-                                    <div class="d-flex align-items-center justify-content-between">
-                                       <div class="d-flex align-items-center">
-                                          <div class="user-img mr-3">
-                                             <img src="../assets/images/user/1.jpg" alt="userimg" class="avatar-60 rounded-circle img-fluid">
-                                          </div>
-                                          <h6>Your Story</h6>
-                                       </div>
-                                       <div class="card-post-toolbar">
-                                          <div class="dropdown">
-                                             <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button">
-                                             <span class="btn btn-primary">Friend</span>
-                                             </span>
-                                             <div class="dropdown-menu m-0 p-0">
-                                                <a class="dropdown-item p-3" href="#">
-                                                   <div class="d-flex align-items-top">
-                                                      <div class="icon font-size-20"><i class="ri-save-line"></i></div>
-                                                      <div class="data ml-2">
-                                                         <h6>Public</h6>
-                                                         <p class="mb-0">Anyone on or off Facebook</p>
-                                                      </div>
-                                                   </div>
-                                                </a>
-                                                <a class="dropdown-item p-3" href="#">
-                                                   <div class="d-flex align-items-top">
-                                                      <div class="icon font-size-20"><i class="ri-close-circle-line"></i></div>
-                                                      <div class="data ml-2">
-                                                         <h6>Friends</h6>
-                                                         <p class="mb-0">Your Friend on facebook</p>
-                                                      </div>
-                                                   </div>
-                                                </a>
-                                                <a class="dropdown-item p-3" href="#">
-                                                   <div class="d-flex align-items-top">
-                                                      <div class="icon font-size-20"><i class="ri-user-unfollow-line"></i></div>
-                                                      <div class="data ml-2">
-                                                         <h6>Friends except</h6>
-                                                         <p class="mb-0">Don't show to some friends</p>
-                                                      </div>
-                                                   </div>
-                                                </a>
-                                                <a class="dropdown-item p-3" href="#">
-                                                   <div class="d-flex align-items-top">
-                                                      <div class="icon font-size-20"><i class="ri-notification-line"></i></div>
-                                                      <div class="data ml-2">
-                                                         <h6>Only Me</h6>
-                                                         <p class="mb-0">Only me</p>
-                                                      </div>
-                                                   </div>
-                                                </a>
-                                             </div>
-                                          </div>
-                                       </div>
-                                    </div>
-                                 </div>
-                                 <button type="submit" class="btn btn-primary d-block w-100 mt-3">Post</button>
-                              </div>
-                           </div>
                         </div>
                      </div>
                   </div>
@@ -1240,7 +1128,77 @@
     <script th:src="@{/assets/js/lottie.js}"></script>
 
     <script th:src="@{/assets/js/lottie.js}"></script>
-    
+
+
+    <!-- Bootstrap and jQuery Scripts -->
+
+    <script>
+       // Function to handle form submission
+       document.getElementById('create-post-form').addEventListener('submit', function(event) {
+          event.preventDefault();
+
+          const postContent = document.getElementById('postContent').value;
+          const fileInput = document.getElementById('imageUpload');
+          const file = fileInput.files[0];
+
+          const formData = new FormData();
+          formData.append('content', postContent);
+          formData.append('file', file);
+
+          const token = localStorage.getItem('token');
+
+          fetch('/api/v1/post/new?userId=123', {
+             method: 'POST',
+             headers: {
+                'Authorization': `Bearer ${token}`,
+             },
+             body: formData
+          })
+                  .then(response => {
+                     if (!response.ok) {
+                        throw new Error('Failed to create post.');
+                     }
+                     return response.json();
+                  })
+                  .then(data => {
+                     console.log('Post created successfully:', data);
+                     // Handle success
+                  })
+                  .catch(error => {
+                     console.error('Error creating post:', error);
+                     // Handle error
+                  });
+       });
+
+
+       // Function to preview selected image
+       function previewImage(input) {
+          const preview = document.getElementById('imagePreview');
+          const previewContainer = document.getElementById('imagePreviewContainer');
+          const file = input.files[0];
+
+          if (file) {
+             const reader = new FileReader();
+
+             reader.onload = function(e) {
+                preview.src = e.target.result;
+                previewContainer.style.display = 'block'; // Show the preview container
+             }
+
+             reader.readAsDataURL(file);
+          } else {
+             preview.src = '';
+             previewContainer.style.display = 'none'; // Hide the preview container if no file selected
+          }
+       }
+
+       // Event listener for file input change
+       document.getElementById('imageUpload').addEventListener('change', function() {
+          previewImage(this);
+       });
+    </script>
+
+
 
     <!-- offcanvas start -->
  
