--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -451,8 +451,9 @@
           formData.append('file', file);
 
           const token = localStorage.getItem('token');
+          const user = localStorage.getItem('user');
 
-          fetch('/api/v1/post/new?userId=123', {
+          fetch('/api/v1/post/new?userId='+user.id, {
              method: 'POST',
              headers: {
                 'Authorization': `Bearer ${token}`,
