configured the navigation to get current user details

--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -138,14 +138,26 @@
                             </div>
                         </li>
 
+
                         <!-- right profile pic nav start -->
                         <li class="nav-item dropdown">
-                            <a href="#" class="   d-flex align-items-center dropdown-toggle" id="drop-down-arrow" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a href="#" class="d-flex align-items-center dropdown-toggle" id="drop-down-arrow" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <img src="../assets/images/user/1.jpg" class="img-fluid rounded-circle me-3" alt="user">
                                 <div class="caption">
-                                    <h6 class="mb-0 line-height">Bni Cyst</h6>
+                                    <h6 class="mb-0 line-height" id="user-name"></h6>
                                 </div>
                             </a>
+
+                            <script>
+                                document.addEventListener('DOMContentLoaded', function() {
+                                    // Get the user name from localStorage
+                                    const userName = localStorage.getItem('user');
+                                    if (userName) {
+                                        // Display the user name in the HTML
+                                        document.getElementById('user-name').textContent = JSON.parse(userName).name;
+                                    }
+                                });
+                            </script>
                             <div class="sub-drop dropdown-menu caption-menu" aria-labelledby="drop-down-arrow">
                                 <div class="card shadow-none m-0">
                                     <div class="card-header  bg-primary">
