white images removed

--- a/src/main/resources/templates/profile-edit.html
+++ b/src/main/resources/templates/profile-edit.html
@@ -64,7 +64,7 @@
                                         <div class="form-group row align-items-center">
                                             <div class="col-md-12">
                                                 <div class="profile-img-edit">
-                                                <img class="profile-pic" src="../assets/images/user/11.png" alt="profile-pic">
+                                                <img class="profile-pic" src="../assets/images/user/20.jpg" alt="profile-pic">
                                                 <div class="p-image">
                                                     <i class="ri-pencil-line upload-button text-white"></i>
                                                     <input class="file-upload" type="file" accept="image/*"/>
