--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -42,7 +42,7 @@
                   </div>
                   <div class="user-detail text-center mb-3">
                      <div class="profile-img">
-                        <img src="../assets/images/user/11.png" alt="profile-img" class="avatar-130 img-fluid" />
+                        <img src="../assets/images/user/20.jpg" alt="profile-img" class="avatar-130 img-fluid" />
                      </div>
                      <div class="profile-detail">
                         <h3 class="">Bni Cyst</h3>
