--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -33,17 +33,17 @@
                         <div class="sign-slider overflow-hidden">
                             <ul class="swiper-wrapper list-inline m-0 p-0">
                                 <li class="swiper-slide">
-                                    <img src="../assets/images/login/1.png" class="img-fluid mb-4" alt="logo">
+                                    <img src="../assets/images/login/1.jpg" class="img-fluid mb-4" alt="logo">
                                     <h4 class="mb-1 text-white">Find new friends</h4>
                                     <p>Discover and connect with new people who share your interests and passions.</p>
                                 </li>
                                 <li class="swiper-slide">
-                                    <img src="../assets/images/login/2.png" class="img-fluid mb-4" alt="logo">
+                                    <img src="../assets/images/login/2.jpg" class="img-fluid mb-4" alt="logo">
                                     <h4 class="mb-1 text-white">Connect with the world</h4>
                                     <p>Stay connected with friends, family, and communities from around the globe.</p>
                                 </li>
                                 <li class="swiper-slide">
-                                    <img src="../assets/images/login/3.png" class="img-fluid mb-4" alt="logo">
+                                    <img src="../assets/images/login/3.jpg" class="img-fluid mb-4" alt="logo">
                                     <h4 class="mb-1 text-white">Create new events</h4>
                                     <p>Organize and join events to meet new people and share experiences together.</p>
                                 </li>
